<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/nav_workout"
            android:title="@string/my_workouts" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/nav_location"
            android:title="@string/gym_locations" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/nav_log"
            android:title="@string/log_workouts" />
        <item
            android:id="@+id/nav_instructor"
            android:icon="@drawable/nav_instructor"
            android:title="@string/gym_instructors" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/nav_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
