<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gym1"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        style="@style/logoname"
        android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            style="@style/heading"/>

        <android.support.design.widget.TextInputLayout
            style="@style/edittext"
            android:hint="@string/first_name"
            android:id="@+id/firstname">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/edittext"
            android:hint="@string/last_name"
            android:id="@+id/lastname">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/edittext"
            android:hint="@string/email"
            android:id="@+id/email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/edittext"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFF"
            android:id="@+id/password">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/edittext"
            android:hint="@string/confirm_password"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFF"
            android:id="@+id/confpassword">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                />

        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnregister"
        style="@style/edittext"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounder_button"
        android:textColor="@color/burgandy"
        android:text="@string/create"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="haveaccount"
        android:text="@string/already_have_an_account"
        android:textColor="#800020" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />





</LinearLayout>