<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MoreInformation">

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        style="@style/logoname"
        android:textSize="40sp" />


    <android.support.design.widget.TextInputLayout
        style="@style/edittext"
        android:hint="@string/height"
        android:id="@+id/height">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/edittext"
        android:hint="@string/weight"

        android:id="@+id/weight">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/edittext"
        android:hint="@string/desired_weight"
        android:id="@+id/desiredweight">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="20sp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:id="@+id/radiogender">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiomale"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:onClick="changeGender"
                android:text="Male"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiofemale"
                android:layout_marginLeft="15dp"
                android:onClick="changeGender"
                android:textColor="@color/white"
                android:text="Female"
                />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@android:color/transparent"
            android:text="@string/date_of_birth"
            android:layout_height="50dp"
            android:id="@+id/dob"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:onClick="showDatePickerDialog"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/slected_dob"
            android:textColor="@color/white"
            />

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/home_gym"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/btnregister"
        style="@style/edittext"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounder_button"
        android:textColor="@color/burgandy"
        android:text="@string/submit"
        android:onClick="nextactivity"
        android:layout_marginTop="5dp"
        android:textSize="20sp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loader"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />

</LinearLayout>